RESOLVED FIXED165493
PureNaN: fix typo
https://bugs.webkit.org/show_bug.cgi?id=165493
Summary PureNaN: fix typo
JF Bastien
Reported 2016-12-06 14:49:52 PST
I doubt IEEE 854 was the intent.
Attachments
patch (1.73 KB, patch)
2016-12-06 14:51 PST, JF Bastien
no flags
JF Bastien
Comment 1 2016-12-06 14:51:02 PST
Mark Lam
Comment 2 2016-12-06 14:51:36 PST
Comment on attachment 296326 [details] patch r=me
WebKit Commit Bot
Comment 3 2016-12-06 14:53:26 PST
Attachment 296326 [details] did not pass style-queue: ERROR: Source/JavaScriptCore/runtime/PureNaN.h:35: Should have only a single space after a punctuation in a comment. [whitespace/comments] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 4 2016-12-06 15:29:55 PST
Comment on attachment 296326 [details] patch Clearing flags on attachment: 296326 Committed r209429: <http://trac.webkit.org/changeset/209429>
WebKit Commit Bot
Comment 5 2016-12-06 15:29:59 PST
All reviewed patches have been landed. Closing bug.
Simon Fraser (smfr)
Comment 6 2016-12-06 20:26:28 PST
Can't believe you fixed the typo and not the two spaces after periods in the comment.
JF Bastien
Comment 7 2016-12-06 20:34:12 PST
(In reply to comment #6) > Can't believe you fixed the typo and not the two spaces after periods in the > comment. That's the style throughout the file. I assume that was intentional on Fil's part, but IEEE-854 is actively misleading because it *almost* means something (it's an abandoned standard which IEEE-754 replaced).
Filip Pizlo
Comment 8 2016-12-06 21:18:47 PST
(In reply to comment #7) > (In reply to comment #6) > > Can't believe you fixed the typo and not the two spaces after periods in the > > comment. > > That's the style throughout the file. I assume that was intentional on Fil's > part, but IEEE-854 is actively misleading because it *almost* means > something (it's an abandoned standard which IEEE-754 replaced). I know I'm not supposed to use two spaces but I'm a terrible person.
Note You need to log in before you can comment on or make changes to this bug.