PureNaN: fix typo https://bugs.webkit.org/show_bug.cgi?id=165493

Reviewed by Mark Lam.

* runtime/PureNaN.h:


Canonical link: https://commits.webkit.org/183096@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@209429 268f45cc-cd09-0410-ab3c-d52691b4dbfc